# GDDXA-CA-Unix-Win_C_UDP_Socket

./: LICENSE  README.md
.github/workflows/: action_cats.yml
hangman/: .gitignore  CMakeLists.txt  compileClient.sh  compileClientServerPair.sh  compileClient_Fork.sh  compileClient_udp.sh  compileServer.sh  compileServer_Fork.sh  compileServer_udp.sh
hangman/docs/: Doxygen.config  refman.rtf
hangman/docs/rtf/: dir_1c7570ed26e9da963fc5eb6968b0f01c.rtf  dir_5aa69a72ba0b221d75c2ec104cb2a65b.rtf  dir_61c9ba8490bb7446a98a607bbdadccbf.rtf  dir_d232ba91c66cb6d1d2e54192adac3824.rtf  refman.rtf  ~$refman.rtf
hangman/hdr/: client.h  datatypes_all.h  datatypes_client.h  datatypes_server.h  datatypes_tcp.h  datatypes_udp.h  hangclient.h  hangclient_fork.h  hangclient_tcp.h  hangclient_tcp_fork.h  hangclient_udp.h  hangserver.h  hangserver_tcp.h  hangserver_tcp_fork.h  hangserver_udp.h
hangman/rsc/: words
hangman/src/: hangClient_Fork.c  hangclient.c  hangclient_fork.c  hangclient_tcp_fork.c  hangclient_udp.c  hangserver.c  hangserver_Fork.c  hangserver_iter.c  hangserver_udp.c
